[package]
name = "hua"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["crates/hua-core"]
exclude = ["crates/hua-platform"]

[dependencies]
clap = "3.1"
hua-core = { path = "crates/hua-core" }
toml = "0.5"
dialoguer = "0.10"
console = "0.15"
env_logger = "0.9"