[package]
name = "hua-core"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
users = "0.11"
petgraph = { version = "0.6", features = ["serde-1", "default"] }
daggy = { version = "0.8", features = ["serde-1"] }
rustbreak = "2.0"
serde = "1.0"
pot = "1.0"
reqwest = { version = "0.11", features = ["blocking"] }
url = "2.2"
temp-dir = "0.1"
semver = { version = "1.0", features = ["serde"] }
relative-path = { version = "1.6", features = ["serde"] }
snafu = "0.7"
rs_merkle = "1.2"
blake3 = "1.3"
walkdir = "2"
fs_extra = "1.2"