[package]
name = "hua-core"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
resolver = "2"

[lib]
crate-type = ["rlib"]

[dependencies]
users = "0.11"
petgraph = { version = "0.6", features = ["serde-1", "default"] }
daggy = { version = "0.8", features = ["serde-1"] }
rustbreak = "2.0"
serde = "1.0"
serde_with = "1.12"
pot = "1.0"
toml = "0.5"
temp-dir = "0.1"
semver = { version = "1.0", features = ["serde"] }
relative-path = { version = "1.6", features = ["serde"] }
snafu = "0.7"
rs_merkle = "1.2"
blake3 = { version = "1.3", features = ["pure"] }
walkdir = "2"
fs_extra = "1.2"
cached-path = { version = "0.5", default-features = false, features = ["rustls-tls"] }
os_type = { git = "https://github.com/MordragT/os_type" }
command-fds = "0.2"
console = "0.15"
indicatif = "0.16"